# ai-agent-air-quality

./: .gitignore  README.md
air-health-ui/: README.md  package-lock.json  package.json
air-health-ui/app/: globals.css  layout.tsx  page.tsx
air-health-ui/components/: comparison-chart.tsx  knowledge-graph.tsx  paper-detail.tsx  paper-table.tsx  sidebar.tsx  stat-card.tsx  upload-card.tsx
air-health-ui/lib/: api.ts  mock-data.ts  types.ts
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: cli.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: extraction.py  knowledge_graph.py  papers.py
backend/app/core/: config.py  exceptions.py
backend/app/prompts/: extraction_prompt.py
backend/app/schemas/: __init__.py  common.py  document.py  extraction.py  knowledge_graph.py  llm_extraction.py  paper.py
backend/app/services/: document_service.py  extraction_context.py  file_storage.py  header_extractor.py  knowledge_graph_service.py  llm_extraction_service.py  pdf_parser.py  section_detector.py
backend/app/utils/: export_schema.py
backend/tests/: test_extraction_context.py  test_extraction_storage.py  test_header_extractor.py  test_knowledge_graph.py  test_schema.py  test_section_detector.py  test_upload_api.py
