[project]
name = "air-health-research-agent"
version = "0.1.0"
description = "AI research agent for air quality and health papers"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0",
    "pymupdf>=1.25",
    "fastapi[standard]>=0.115",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20"
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
air-health-api = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
